--- a/.github/workflows/build-packages.yml
+++ b/.github/workflows/build-packages.yml
@@ -23,8 +23,8 @@ jobs:
     - name: Install pixi
       uses: prefix-dev/setup-pixi@v0.8.1
 
-    - name: Install meso-forge-tooling
-      run: pixi global install meso-forge-tooling -c https://prefix.dev/meso-forge
+    - name: Install meso-forge
+      run: pixi global install meso-forge -c https://prefix.dev/meso-forge
 
     - name: Build packages
       run: pixi run build-all
